# timeplan

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.server.yml  docker-compose.yml
.github/workflows/: verify.yml
.gocache/: trim.txt
.gocache/00/: 0004a4dbe6daee8c415e3aec9c3e12f454c42b9fffad8ac9575b7955749e19ca-d  00312176ee7d276f8516f5cdbc3988b9aebbe3c9b1b3b0509adb78fbcaaf6098-a  00347474c5b402e6e4a4e2a6c8648370e76c877145beabd13fb4e562a03b4ba7-a  00417899102a447e01c03a0f149b3da68b57b8fb61b06d558a3c834ba452865d-a  00693c832b2078375444d2a5b89951e13e1e8006dd70cc08f3e5cab0d3e1f408-a  006a21954c058a26cf2c515384dbfed43a7faed0eb783fca35d66cb6728d3c42-a  0074c9728ab33a7b45c94401e1751bd55d724d4201b6328ebb30072b8e2242e1-a  00a5106a37f80ac0753117930ca442841b2b6fee6df083a38ada4058b1faf2a3-a  00a518dca45adefa6ac163b46895ff704d73253f92ca5421ac808e87fe34fac5-a  00a8871d0e8655b4cd610a66e33e99aade44eae5a13df1aebb66c95e8c7fd912-a  00c248d8b098731b64c2d594639923fea187b8ddf06fa816753cb6d30d757488-a  00dbd898ed24876ff5b5f43ca200b80250a081a333ea39fe16b966f0e8fd4ab5-a  00ee6313a4202fa3ceaf7d8c035384962d3a660c5101f622c785940f186df8fd-a  00f76838a6da90b05c7b42d293d3a62801da012741b7c8a1813acdb80dd738cc-a
.gocache/01/: 0127192f4398010c33e9161fe1087e7a1a0833f00fbc033683b2bfaa27e9f815-a  012f36ace076f5e68591bcf28957f00edb0253522c0b1e248ae6e4c0ba46d9c5-a  01322de0210a558a8e55a845ffe87893f52315f65b2ca007d2bff5b961c5c5da-d  013646bc161ad755b3274a913e36025b9b549adc31c7549eb7dfd407e4189302-a  013a6d09d27814e8705548040ebccd820cb6897eb210b87e3a5d6ff396e2f7e0-a  01451940dab6618123714bc566bfd427cb54dcfa923719a87aeb159e186ab0b0-a  01468846bcd5a34b5a9f3b4264e40eb725f5643ad92803d1f04081fe368be740-d  015b98a38cb823872194f11fc8efe141d284e7fe88ed2bedbad5b247616facb8-d  0180e1bf8d97d003e689eff4abdc8ab736cdd8f734cf4d4198e471adcf279af0-d  (+4 more)
docs/: deployment.md
server/: go.mod  go.sum
(+2378 files in other folders)
